# LTM_MathPuzzle

./: .gitignore  BAO_CAO_SERVER_NEW.md  HUONG_DAN_CHAY.md  PROTOCOL.md  README.md  SERVER_ARCHITECTURE.md  TONG_KET.md
client/: CMakeLists.txt  MathPuzzleClient.pro  bsdsocketclient.cpp  bsdsocketclient.h  build.bat  build.sh  gamescreen.cpp  gamescreen.h  gamestatemachine.cpp  gamestatemachine.h  lobbyscreen.cpp  lobbyscreen.h  loginscreen.cpp  loginscreen.h  main.cpp  mainwindow.cpp  mainwindow.h  networkmanager.cpp  networkmanager.h  resources.qrc  resultscreen.cpp  resultscreen.h  roomscreen.cpp  roomscreen.h
server/: .gitignore  auth.c  game.c  network.c  room.c  server.c  server.h
